crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__class__inherited_method.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/inherited_method.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class Foo (global @3) ∅
      (method inFoo [(local this @0)] []
         (block
            (print "in foo"))))
   (class Bar (global @4) (global Foo @3)
      (method inBar [(local this @0)] [None]
         (block
            (print "in bar"))))
   (class Baz (global @5) (global Bar @4)
      (method inBaz [(local this @0)] [None]
         (block
            (print "in baz"))))
   (var baz (global @6) (call +6 (global Baz @5)))
   (expr (call +7 (attr (global baz @6) inFoo)))
   (expr (call +7 (attr (global baz @6) inBar)))
   (expr (call +7 (attr (global baz @6) inBaz))))

----- stderr -----
