crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__class__local_inherit_other.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/class/local_inherit_other.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (class A (global @3) ∅)
   (fun f (global @4) [] []
      (block
         (class B (local @0) (global A @3))
         (return (local B @0))))
   (print (call +5 (global f @4))))

----- stderr -----
